--- a/boards.cfg
+++ b/boards.cfg
@@ -255,6 +255,7 @@ sama5d3xek_mmc               arm         armv7       sama5d3xek          atmel  
 sama5d3xek_nandflash         arm         armv7       sama5d3xek          atmel          at91        sama5d3xek:SAMA5D3,SYS_USE_NANDFLASH
 sama5d3xek_spiflash          arm         armv7       sama5d3xek          atmel          at91        sama5d3xek:SAMA5D3,SYS_USE_SERIALFLASH
 sama5d4ek_ramboot            arm         armv7       sama5d4ek           atmel          at91        sama5d4ek:SAMA5D4
+sama5d4ek_spiflash           arm         armv7       sama5d4ek           atmel          at91        sama5d4ek:SAMA5D4,SYS_USE_SERIALFLASH
 highbank                     arm         armv7       highbank            -              highbank
 m53evk                       arm         armv7       m53evk              denx		mx5		m53evk:IMX_CONFIG=board/denx/m53evk/imximage.cfg
 mx51_efikamx                 arm         armv7       mx51_efikamx        genesi         mx5		mx51_efikamx:MACH_TYPE=MACH_TYPE_MX51_EFIKAMX,IMX_CONFIG=board/genesi/mx51_efikamx/imximage_mx.cfg
