--- a/boards.cfg
+++ b/boards.cfg
@@ -254,6 +254,9 @@ pcm051                       arm         armv7       pcm051              phytec 
 sama5d3xek_mmc               arm         armv7       sama5d3xek          atmel          at91        sama5d3xek:SAMA5D3,SYS_USE_MMC
 sama5d3xek_nandflash         arm         armv7       sama5d3xek          atmel          at91        sama5d3xek:SAMA5D3,SYS_USE_NANDFLASH
 sama5d3xek_spiflash          arm         armv7       sama5d3xek          atmel          at91        sama5d3xek:SAMA5D3,SYS_USE_SERIALFLASH
+sama5d3_xplained_mmc         arm         armv7       sama5d3_xplained    atmel          at91        sama5d3_xplained:SAMA5D3,SYS_USE_MMC
+sama5d3_xplained_nandflash   arm         armv7       sama5d3_xplained    atmel          at91        sama5d3_xplained:SAMA5D3,SYS_USE_NANDFLASH
+sama5d3_xplained_spiflash    arm         armv7       sama5d3_xplained    atmel          at91        sama5d3_xplained:SAMA5D3,SYS_USE_SERIALFLASH
 highbank                     arm         armv7       highbank            -              highbank
 m53evk                       arm         armv7       m53evk              denx		mx5		m53evk:IMX_CONFIG=board/denx/m53evk/imximage.cfg
 mx51_efikamx                 arm         armv7       mx51_efikamx        genesi         mx5		mx51_efikamx:MACH_TYPE=MACH_TYPE_MX51_EFIKAMX,IMX_CONFIG=board/genesi/mx51_efikamx/imximage_mx.cfg
